fix: deletes return no body and 204 status
